--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,7 @@
+
+
 <h1>Welcome#index</h1>
 <p>Find me in app/views/welcome/index.html.erb</p>
+<p><%= link_to 'ログイン', [ :new, :user_session ]  %></p>
+<p><%= link_to 'ユーザー登録', [ :new, :user_registration ]  %></p>
+<p><%= link_to 'パスワード再発行', [ :new, :user_password ]  %></p>
