--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,13 @@
     <div id="contents">
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
+      
+      <%= render 'shared/header' %>
+      
       <%= yield %>
+      
+      <%= render 'shared/footer' %>
+      
     </div>
 
 </body>
