--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,3 +1,3 @@
 <div id="footer">
-  <strong>nchak</strong> - Powered by <strong>Ruby on Rails 3.0</strong>
+  <strong>Recomendation Engine</strong> - Powered by <strong>Ruby on Rails 3.2.2</strong>
 </div>
